--- a/gradle.properties
+++ b/gradle.properties
@@ -9,9 +9,9 @@ yarn_mappings=1.21.5+build.1
 loader_version=0.16.13
 
 # Mod Properties
-mod_version=1.0.0
+mod_version=1.0.0b
 maven_group=net.dieguex.monoland
-archives_base_name=monolandhardcore
+archives_base_name=monolandhardcore-1.21.5
 
 # Dependencies
 fabric_version=0.120.0+1.21.5
