--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ yarn_mappings=1.21.5+build.1
 loader_version=0.16.13
 
 # Mod Properties
-mod_version=1.0.0c
+mod_version=1.0.0e
 maven_group=net.dieguex.monoland
 archives_base_name=monolandhardcore-1.21.5
 
